plugins {
    id 'idea'
    id "maven-publish"
    id 'net.neoforged.gradle' version '[6.0.18,6.2)'
    id "org.openrewrite.rewrite" version "7.35.0"
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
    id "net.darkhax.curseforgegradle" version "1.1.15"
    id "com.modrinth.minotaur" version "2.+"
    id 'org.spongepowered.mixin' version '0.7.+'
    id "com.diffplug.spotless" version "7.0.4"
}

def sharedCodeQualityScript = file('../gradle/code-quality.gradle')
apply from: sharedCodeQualityScript.exists() ? sharedCodeQualityScript : 'https://raw.githubusercontent.com/P3pp3rF1y/MultiWorkspace/1.20.x/gradle/code-quality.gradle'

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

spotless {
    enforceCheck = false
    def spotlessFiles = findProperty("spotlessFiles")

    java {
        target spotlessFiles == null ? "src/*/java/**/*.java" : spotlessFiles.toString().split(/\s*,\s*/).findAll { it.endsWith(".java") }

        eclipse().configFile "$projectDir/codeformat/eclipse-java-format.xml"
        importOrder "", "javax", "java", "\\#"
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }

    groovyGradle {
        target spotlessFiles == null ? "*.gradle" : spotlessFiles.toString().split(/\s*,\s*/).findAll { it.endsWith(".gradle") }
        trimTrailingWhitespace()
        endWithNewline()
    }
}

repositories {
    mavenCentral()
    maven { url = "https://modmaven.dev/" }
    maven { url "https://maven.theillusivec4.top/" }
    maven {
        url "https://maven.ftb.dev/releases"
        content {
            includeGroup "dev.ftb.mods"
        }
    }
    maven {
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url "https://maven.blamejared.com/"
        content {
            includeGroup "mezz.jei"
            includeGroup "vazkii.patchouli"
            includeGroup "vazkii.botania"
        }
    }
    maven {
        url = "https://maven.createmod.net"
        content {
            includeGroup "com.simibubi.create"
        }
    }
    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
        content {
            includeGroup "dev.emi"
        }
    }
    maven {
        url = "https://maven.shedaniel.me/"
        content {
            includeGroup "dev.architectury"
            includeGroup "me.shedaniel"
            includeGroup "me.shedaniel.cloth"
        }
    }
    maven {
        name = "GHPReliquary"
        url = uri("https://maven.pkg.github.com/p3pp3rf1y/reliquary")
        credentials {
            username = System.getenv("GITHUB_ACTOR")
            password = System.getenv("GITHUB_TOKEN")
        }
        content {
            includeModule("net.p3pp3rf1y", "reliquary")
        }
    }
    maven {
        url = 'https://maven.wispforest.io/releases'
        content {
            includeGroup "io.wispforest"
        }
    }
}

group = mod_group_id
version = "${project.minecraft_version}-${project.mod_version}.${getBuildNumber()}"
archivesBaseName = mod_id

sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '17'

minecraft {
    mappings channel: 'parchment', version: "$parchment_version"
    copyIdeResources = true
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        configureEach {
            workingDirectory project.file("run/${it.name}")
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
            property 'forge.logging.console.level', 'debug'
            property "mixin.env.disableRefMap", "true"

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
        client {
        }
        server {
        }
        data {
            property 'fml.earlyprogresswindow', 'false'
            //property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            workingDirectory project.file('run')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/')
        }
    }
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

dependencies {
    minecraft "net.neoforged:forge:${minecraft_version}-${neo_version}"

    annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'

    if (findProject(':Reliquary') != null) {
        implementation project(':Reliquary')
    } else {
        compileOnly fg.deobf("net.p3pp3rf1y:reliquary:${reliquary_version}") {
            transitive = false
        }
        runtimeOnly fg.deobf("net.p3pp3rf1y:reliquary:${reliquary_version}") {
            transitive = false
        }
        testImplementation fg.deobf("net.p3pp3rf1y:reliquary:${reliquary_version}") {
            transitive = false
        }
    }

    compileOnly fg.deobf("mezz.jei:jei-${jei_mc_version}:${jei_version}")
    compileOnly fg.deobf("dev.emi:emi-forge:${emi_version}")
    compileOnly fg.deobf("me.shedaniel:RoughlyEnoughItems-forge:${rei_version}")
    compileOnly fg.deobf("me.shedaniel.cloth:cloth-config-forge:${cloth_config_version}")
    compileOnly fg.deobf("dev.architectury:architectury-forge:${architectury_version}")
    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
    compileOnly fg.deobf("curse.maven:balm-531761:${balm_cf_file_id}")
    compileOnly fg.deobf("curse.maven:craftingtweaks-233071:${crafting_tweaks_cf_file_id}")
    compileOnly fg.deobf("curse.maven:itemborders-513769:${item_borders_cf_file_id}")
    compileOnly fg.deobf("curse.maven:iceberg-520110:${iceberg_cf_file_id}")
    compileOnly fg.deobf("curse.maven:prism-638111:${prism_cf_file_id}")
    compileOnly fg.deobf("curse.maven:chipped-456956:${chipped_cf_file_id}")
    compileOnly fg.deobf("curse.maven:resourcefullib-570073:${resourcefullib_cf_file_id}")
    compileOnly fg.deobf("curse.maven:athena-841890:${athena_cf_file_id}")
    compileOnly fg.deobf("curse.maven:trashslot-235577:${trashslot_cf_file_id}")
    compileOnly fg.deobf("com.simibubi.create:create-${create_mc_version}:${create_version}:all") {
        transitive = false
    }
    compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}:api")
    compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")

    compileOnly fg.deobf("dev.ftb.mods:ftb-chunks-forge:${ftb_chunks_version}")
    compileOnly fg.deobf("dev.ftb.mods:ftb-library-forge:${ftb_library_version}")

    compileOnly fg.deobf("curse.maven:openpartiesandclaims-636608:${openpartiesandclaims_cf_file_id}")
/*
    compileOnly fg.deobf("curse.maven:autoreglib-250363:${autoreglib_cf_file_id}")
    compileOnly fg.deobf("curse.maven:quark-243121:${quark_cf_file_id}")
*/
    //runtimeOnly fg.deobf("curse.maven:balm-531761:${balm_cf_file_id}")
    compileOnly fg.deobf("io.wispforest:accessories-neoforge:${accessories_version}") {
        transitive = false
    }

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.+'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.+'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.+'
	testImplementation "org.mockito:mockito-core:5.12.+"
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
    config "${mod_id}.create.mixins.json"
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

tasks.named('jar', Jar).configure {
    from('/') {
        include 'LICENSE'
    }

    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : "p3pp3rf1y",
                'Specification-Version'   : '1', // We are version 1 of ourselves
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : "p3pp3rf1y",
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs"            : "${mod_id}.mixins.json,${mod_id}.create.mixins.json"
        ])
    }
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
            neo_version         : neo_version, neo_version_range: neo_version_range,
            loader_version_range: loader_version_range,
            mod_id              : mod_id, mod_version: mod_version,
            mod_full_version    : "${project.mod_version}.${getBuildNumber()}",
            jei_version_range    : jei_version_range
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

static def getBuildNumber() {
    if (System.getenv("GITHUB_RUN_NUMBER") != null) {
        return System.getenv("GITHUB_RUN_NUMBER").toString()
    }
    return "1"
}

tasks.named('publish').configure {
    dependsOn 'reobfJar'
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("${github_package_url}")
            credentials {
                username = System.getenv("GITHUB_ACTOR")
                password = System.getenv("GITHUB_TOKEN")
            }
        }
    }
    publications {
        gpr(MavenPublication) {
            artifactId = mod_id
            from(components.java)
        }
    }
}

def sharedChangelogScript = file('../gradle/changelog.gradle')
apply from: sharedChangelogScript.exists() ? sharedChangelogScript : 'https://raw.githubusercontent.com/P3pp3rF1y/MultiWorkspace/1.20.x/gradle/changelog.gradle'

task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
    dependsOn 'generateChangelog'

    apiToken = System.getenv("CURSEFORGE_TOKEN")
    def mainFile = upload(project.curseforge_id, file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar"))
    mainFile.changelogType = 'markdown'
    mainFile.changelog = { project.ext.changelog }
    mainFile.addModLoader('NeoForge')
    mainFile.addModLoader('Forge')
    mainFile.releaseType = "${release_type}"
    "${release_versions}".split(',').each {
        mainFile.addGameVersion("${it}")
    }
    onlyIf { !project.ext.changelog.isEmpty() }
}

modrinth {
    token = System.getenv("MODRINTH_TOKEN")
    projectId = "${modrinth_project_id}"
    versionType = "${release_type}"
    uploadFile = jar
    gameVersions = "${release_versions}".split(',').collect {e -> e}
    loaders = ["forge", "neoforge"]
    changelog = provider {
        project.ext.changelog
    }
}
tasks.modrinth {
    dependsOn(tasks.generateChangelog)
    onlyIf { !project.ext.changelog.isEmpty() }
}

task printVersionName {
    println "version:" + project.version
}
